clusters/k8s-keiretsu/apps/media/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-tls
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: luke-issuer
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: haproxy
  rules:
    - host: prowlarr.lukehouge.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
  tls:
    - secretName: prowlarr-luke-tls
      hosts:
        - prowlarr.lukehouge.com
